styles.css
/* Reset styles */
*, *:before, *:after {
  box-sizing: border-box;
}

body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  /* background-color: #f4f4f4; */
  color: #535353;
}

/* Container Styles */
.container {
  max-width: 800px;
  margin: 0 auto;
  /* background-color: #fff; */
  padding: 2em;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}

.clearfix::after {
  content: "";
  display: table;
  clear: both;
}

h1 {
  text-align: center;
  margin-bottom: 0;
  color: #eebf00;
}

a {
  color: #ff31bd;
  font-weight: bold;
}
/* Logo styles */
.logo {
  width: 15em;
  margin: 0 auto;
  display: block;
  padding-bottom: 2em;
}

/* Event List Styles - Mobile styles as default */
.event-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.date {
  width: 100%;
  border-bottom: 1px solid #ff9500;
  margin-bottom: 0.5em;
  float: none;
  padding: 10% 1% 0 0;
}

.date h3 {
  font-size: 1.5em;
  margin: 0;
  color: #ff7a06;
}

.date p {
  font-size: .8em;
  margin-top: 0.3em;

}

.event {
  border: none;
  width: 100%;
  margin-top: 0;
  padding-top: 0.5em;
  float: none;
}

.event-details {
  padding: 0;
}

.event-details li {
  list-style: none;
  padding: .2em 0;
  line-height: 22px;
  transition: ease .4s all;
}

.time {
  font-weight: bold;
  font-size: 1em;
  margin-right: 1em;
}

.panel-text ul {
  margin-top: 1em;
  margin-bottom: 1em;
}

.panel-text li {
  list-style: disc;
}

/* Accordion styles */
.accordion {
  background: linear-gradient(262deg, #ff31bd 11%, #ff5f00 100%);
  color: #fff!important;
  cursor: pointer;
  padding: 1em;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
}

.accordion:after {
  content: "\02795";
  font-size: 13px;
  color: #fff!important;
  float: right;
  margin-left: 5px;
}

/* .accordion:hover {
  background: linear-gradient(262deg, #ff31bd 11%, #ff5f00 100%);
} */

.accordion.active:after {
  content: "\2796";
}

article.panel {
  padding: 0 1em;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}

.info {
  margin: 3em auto;
}

/* Media queries for larger screens */
@media all and (min-width: 426px) {
  .date {
    width: 17%;
    padding: 5% 1% 0 0;
    float: left;
    border-bottom: 0;
  }

  .event {
    float: left;
    width: 80%;
    border-left: 1px solid #ccc;
    margin-top: 4%;
    padding-top: 0;
  }

  .event-details {
    padding: revert;
    list-style: none;
  }

  .event-details li {
    padding: 0.3em 0;
  }

  .info {
    width: 50%;
  }

}


/* .event-list>.date:first-child {
  padding-top: 0%;
}

.event-list>.event:first-child {
  padding-top: 0%;
} */

